src/main/nsg-lb.tf
# resource "azurerm_network_security_group" "nsg-lb" {
#   name                = "${var.project_prefix}-nsg-lb"
#   location            = azurerm_resource_group.rg.location
#   resource_group_name = azurerm_resource_group.rg.name

#   security_rule {
#     name                       = "AllowSshInbound"
#     priority                   = 100
#     direction                  = "Inbound"
#     access                     = "Allow"
#     protocol                   = "Tcp"
#     source_port_range          = "*"
#     destination_port_range     = "22"
#     source_address_prefix      = "10.0.2.4"
#     destination_address_prefix = "10.0.1.4"
#     description                = "Allow ssh traffic"
#   }

#   security_rule {
#     name                       = "AllowHTTPInbound"
#     priority                   = 200
#     direction                  = "Inbound"
#     access                     = "Allow"
#     protocol                   = "Tcp"
#     source_port_range          = "*"
#     destination_port_range     = "80"
#     source_address_prefix      = "*"
#     destination_address_prefix = "*"
#     description                = "Allow HTTP traffic"
#   }

#   security_rule {
#     name                       = "DropAllInbound"
#     priority                   = 500
#     direction                  = "Inbound"
#     access                     = "Deny"
#     protocol                   = "*"
#     source_port_range          = "*"
#     destination_port_range     = "*"
#     source_address_prefix      = "*"
#     destination_address_prefix = "*"
#     description                = "Deny all other inbound traffic"
#   }

#   security_rule {
#     name                       = "AllowDNSServerOutbound"
#     priority                   = 400
#     direction                  = "Outbound"
#     access                     = "Allow"
#     protocol                   = "Udp"
#     source_port_range          = "*"
#     destination_port_range     = "53"
#     source_address_prefix      = "*"
#     destination_address_prefix = "*"
#     description                = "Allow DNS over UDP"
#   }
#   security_rule {
#     name                       = "AllowHTTPSOutbound"
#     priority                   = 600
#     direction                  = "Outbound"
#     access                     = "Allow"
#     protocol                   = "Tcp"
#     source_port_range          = "*"
#     destination_port_range     = "443"
#     source_address_prefix      = "*"
#     destination_address_prefix = "*"
#     description                = "Allow HTTPS traffic"
#   }
#   security_rule {
#     name                       = "AllowHTTPToWeb1"
#     priority                   = 900
#     direction                  = "Outbound"
#     access                     = "Allow"
#     protocol                   = "Tcp"
#     source_port_range          = "*"
#     destination_port_range     = "80"
#     source_address_prefix      = "*"
#     destination_address_prefix = "10.0.0.4"
#     description                = "Allow HTTP traffic to web1"
#   }

#   security_rule {
#     name                       = "AllowHTTPToWeb2"
#     priority                   = 1000
#     direction                  = "Outbound"
#     access                     = "Allow"
#     protocol                   = "Tcp"
#     source_port_range          = "*"
#     destination_port_range     = "80"
#     source_address_prefix      = "*"
#     destination_address_prefix = "10.0.0.5"
#     description                = "Allow HTTP traffic to web2"
#   }

#   security_rule {
#     name                       = "DropAllOutbound"
#     priority                   = 1100
#     direction                  = "Outbound"
#     access                     = "Deny"
#     protocol                   = "*"
#     source_port_range          = "*"
#     destination_port_range     = "*"
#     source_address_prefix      = "*"
#     destination_address_prefix = "*"
#     description                = "Deny all other outbound traffic"
#   }


#   tags = var.tags
# }

# resource "azurerm_subnet_network_security_group_association" "nsg_association_lb" {
#   subnet_id                 = module.subnet.lb_subnet.id
#   network_security_group_id = azurerm_network_security_group.nsg-lb.id
# }
